--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-11/",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "push": "git add .; git commit -m 'update'; git push"
   },
   "devDependencies": {
     "glob": "^8.1.0",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "izitoast": "^1.4.0",
+    "pixabay-api": "^1.0.4",
     "simplelightbox": "^2.14.2",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
